<resources>
    <string name="app_name">harmony</string>
    <string name="more">더보기</string>
    <string name="fold">접기</string>

    <!--로그인-->
    <string name="login_title">harmony</string>
    <string name="login_id">아이디를 입력하세요.</string>
    <string name="login_password">비밀번호를 입력하세요.</string>
    <string name="login_loginbtn">로그인</string>
    <string name="login_signupbtn">회원이 아니신가요?</string>
    <string name="login_empty">아이디와 패스워드 모두 입력해주세요.</string>
    <string name="login_iderror">가입되지 않은 아이디입니다.</string>
    <string name="login_pwerror">비밀번호를 다시 입력해주세요.</string>


    <!-- 홈화면 -->
    <string name="home_welcome_message">환영합니다, %s님!</string>
    <string name="home_feed_name1">김보라</string>
    <string name="home_feed_time1">24.07.03</string>
    <string name="home_feed_content1">초콜릿맛 아이스크림이 3스쿱, 초콜릿 드리즐, 그리고 흰 우유로 조합한 달달한 당충전 음료!</string>

    <string name="home_feed_name2">김태영</string>
    <string name="home_feed_time2">22.04.05</string>
    <string name="home_feed_content2">국내산 쌀 카스테라, 유기농 밤과 마스카포네, 키리치즈가 함께 어우러진 수제 치즈케이크. 꼭, 꼭, 꼭, 꼭!!! 드세요!!!! 가로수길 당옥!!!@@@@@@@@@@@@</string>

    <string name="home_feed_name3">송유호</string>
    <string name="home_feed_time3">24.07.02</string>
    <string name="home_feed_content3">바삭한 와플에 소금이 살짝 들어가 단짠을 즐길 수 있는 생크림이 어우러지는 소금우유와플</string>

    <string name="home_feed_name4">임가람</string>
    <string name="home_feed_time4">24.07.02</string>
    <string name="home_feed_content4">자몽의 과육에 물, 설탕, 탄산수를 섞은 톡 쏘는 맛이 일품인 음료!</string>

    <string name="home_snackbar">2024년 12월 25일 진행되는 디저트 페어 입장권을 추첨합니다!</string>


    <!--상세화면-->
    <string name="detail_title">상세 화면</string>
    <string name="detail_img_desc">메뉴 이미지</string>
    <string name="detail_sub_title">메뉴 구성</string>

    <!--회원가입-->
    <string name="signup_title">회원가입</string>
    <string name="signup_name">이름을 입력하세요.</string>
    <string name="signup_signupbtn">회원가입</string>
    <string name="signup_introduce">자기소개를 입력하세요</string>
    <string name="signup_dupbtn">중복 확인</string>
    <string name="sginup_emptyid">아이디를 입력해주세요.</string>
    <string name="sginup_idblank">아이디에는 공백문자가 사용될 수 없습니다.</string>
    <string name="sginup_iderror">아이디는 영문 대소문자, 숫자, 특수문자($@!%*#?&amp;)로 만들 수 있습니다.</string>
    <string name="sginup_idassigned">이미 사용중인 아이디입니다.</string>
    <string name="sginup_idok">사용 가능한 아이디입니다.</string>
    <string name="sginup_dup">아이디 중복체크를 해주세요</string>
    <string name="sginup_pwempty">비밀번호와 이름칸을 채워주세요.</string>
    <string name="sginup_pwblank">비밀번호에는 공백문자가 사용될 수 없습니다.</string>
    <string name="sginup_pwerror">비밀번호는 영문,숫자,특수문자($@!%*#?&amp;)를 포함해 8자리 이상이어야 합니다.</string>

    <!--마이페이지-->
    <string name="my_page_toolbar_title">마이페이지</string>
    <string name="my_page_user_menu1">%s의 메뉴 1</string>
    <string name="my_page_user_menu2">%s의 메뉴 2</string>
    <string name="my_page_user_menu3">%s의 메뉴 3</string>


    <!-- 메뉴 -->
    <string-array name="menu_user_list">
        <item>김보라</item>
        <item>김태영</item>
        <item>송유호</item>
        <item>임가람</item>
        <item>김보라</item>
    </string-array>

    <string-array name="menu_title_list">
        <item>우롱티와 얼그레이 브레드 푸딩</item>
        <item>아이스 아메리카노와 딸기 티라미수</item>
        <item>콜드 브루와 소금우유생크림 와플</item>
        <item>자몽 에이드와 아이스크림 크로플</item>
        <item>웨딩 티칵테일과 바스크 치즈 케이크</item>
    </string-array>

    <string-array name="menu_desc_list">
        <item>깔끔한 우롱티와 달달 쌉싸름한 얼그레이 브레드 푸딩의 조화로운 harmony~</item>
        <item>쓰고 깊은 맛과 달콤하고 상큼한 맛이 어우러지니, 마치 더운 여름 날에 서늘한 그늘 아래 앉아 봄날의 향기를 만끽하는 것 같구나. 이 얼마나 조화로운가?</item>
        <item>단짠의 맛이 어우러지는 소금우유생크림 와플에, 살짝 존재하는 느끼함을 잡아주는 콜드브루의 조화.</item>
        <item>새콤달콤한 자몽 에이드와 달콤 바삭한 아이스크림 크로플의 세트. 크로플의 달콤함을 자몽 에이드로 잡아줘서 맛있습니다.</item>
        <item>웨딩 임페리얼 티로 만든 칵테일과 부드러운 바스크 치즈 케이크! 조화로운가? 부드러움이 2배인 조합!</item>
    </string-array>

    <string-array name="menu_components1_title_list">
        <item>우롱티</item>
        <item>아이스 아메리카노</item>
        <item>콜드 브루</item>
        <item>자몽 에이드</item>
        <item>웨딩 티칵테일</item>
    </string-array>

    <string-array name="menu_components1_desc_list">
        <item>엄선된 다원에서 하나하나 직접 재배한 프리미엄 우롱티! 정말 맛있어요.</item>
        <item>차가운 물에 연하게 탄 검은 물이랴, 마치 녹음 짙은 여름날 얼음처럼 서늘한 느낌을 준다네. 그 맛은 쓰고 깊으며 몸을 시원하게 해 주니, 더위를 물리치기에 더 없이 좋구나.</item>
        <item>일반적인 커피와는 달리 차가운 물에 오랜 시간 우려내서 쓴맛이 덜 하고 부드럽게 마실 수 있는 커피이다.</item>
        <item>새콤달콤한 자몽과 톡 쏘는 탄산수와의 조화.</item>
        <item>프랑스의 최고급 홍차 웨딩 임페리얼로 블렌딩한 티 칵테일! 향긋한 카라멜과 부드러운 목넘김이 일품.</item>
    </string-array>

    <string-array name="menu_components2_title_list">
        <item>얼그레이 브레드 푸딩</item>
        <item>딸기 티라미수</item>
        <item>소금우유생크림 와플</item>
        <item>아이스크림 크로플</item>
        <item>바스크 치즈 케이크</item>
    </string-array>

    <string-array name="menu_components2_desc_list">
        <item>향긋한 얼그레이와 쌉싸름한 카카오닙스, 그리고 오독오독 호두까지. 너무 달지도, 쓰지도 않고 조화롭게 맛있는 브레드 푸딩도 드셔보세요.</item>
        <item>부드러운 하얀 빵 사이에 붉은 딸기와 달콤한 크림을 겹겹이 쌓아 만든 진미라네. 그 맛은 달콤하기도 상큼하기도 하여 한 입 머금으면 마치 봄날의 화사한 꽃밭에 있는 듯한 기분을 느끼게 한다네.</item>
        <item>우유생크림에 소금을 약간 추가하여 단짠의 조화를 이루고 느끼함을 덜하게 해준 디저트이다.</item>
        <item>달콤한 바닐라 아이스크림과 크로플과 함께 달콤 바삭한 맛을 즐겼습니다.</item>
        <item>스모키한 향이 입혀져 훨씬 더 고급스러운 풍미를 느낄 수 있는 바스크 치즈 케이크는 입에 넣자마자 녹아 없어질 거예요~!</item>
    </string-array>

    <string name="menu_name1">우롱티와 얼그레이 브레드 푸딩</string>
    <string name="menu_desc1">깔끔한 우롱티와 달달 쌉싸름한 얼그레이 브레드 푸딩의 조화로운 harmony~</string>
    <string name="menu_components1_name1">우롱티</string>
    <string name="menu_components1_desc1">엄선된 다원에서 하나하나 직접 재배한 프리미엄 우롱티! 정말 맛있어요.</string>
    <string name="menu_components1_name2">얼그레이 브레드푸딩</string>
    <string name="menu_components1_desc2">향긋한 얼그레이와 쌉싸름한 카카오닙스, 그리고 오독오독 호두까지. 너무 달지도, 쓰지도 않고 조화롭게 맛있는 브레드 푸딩도 드셔보세요.</string>

    <string name="menu_name2">아이스 아메리카노와 딸기 티라미수</string>
    <string name="menu_desc2">쓰고 깊은 맛과 달콤하고 상큼한 맛이 어우러지니, 마치 더운 여름 날에 서늘한 그늘 아래 앉아 봄날의 향기를 만끽하는 것 같구나. 이 얼마나 조화로운가?</string>
    <string name="menu_components2_name1">아이스 아메리카노</string>
    <string name="menu_components2_desc1">차가운 물에 연하게 탄 검은 물이랴, 마치 녹음 짙은 여름날 얼음처럼 서늘한 느낌을 준다네. 그 맛은 쓰고 깊으며 몸을 시원하게 해 주니, 더위를 물리치기에 더 없이 좋구나.</string>
    <string name="menu_components2_name2">딸기 티라미수</string>
    <string name="menu_components2_desc2">부드러운 하얀 빵 사이에 붉은 딸기와 달콤한 크림을 겹겹이 쌓아 만든 진미라네. 그 맛은 달콤하기도 상큼하기도 하여 한 입 머금으면 마치 봄날의 화사한 꽃밭에 있는 듯한 기분을 느끼게 한다네.</string>

    <string name="menu_name3">콜드 브루와 소금우유생크림 와플</string>
    <string name="menu_desc3">단짠의 맛이 어우러지는 소금우유생크림 와플에, 살짝 존재하는 느끼함을 잡아주는 콜드브루의 조화.</string>
    <string name="menu_components3_name1">콜드 브루</string>
    <string name="menu_components3_desc1">일반적인 커피와는 달리 차가운 물에 오랜 시간 우려내서 쓴맛이 덜 하고 부드럽게 마실 수 있는 커피이다.</string>
    <string name="menu_components3_name2">소금우유생크림 와플</string>
    <string name="menu_components3_desc2">우유생크림에 소금을 약간 추가하여 단짠의 조화를 이루고 느끼함을 덜하게 해준 디저트이다.</string>

    <string name="menu_name4">자몽 에이드와 아이스크림 크로플</string>
    <string name="menu_desc4">새콤달콤한 자몽 에이드와 달콤 바삭한 아이스크림 크로플의 세트. 크로플의 달콤함을 자몽 에이드로 잡아줘서 맛있습니다.</string>
    <string name="menu_components4_name1">자몽 에이드</string>
    <string name="menu_components4_desc1">새콤달콤한 자몽과 톡 쏘는 탄산수와의 조화.</string>
    <string name="menu_components4_name2">아이스크림 크로플</string>
    <string name="menu_components4_desc2">달콤한 바닐라 아이스크림과 크로플과 함께 달콤 바삭한 맛을 즐겼습니다.</string>

    <string name="menu_name5">웨딩 티칵테일과 바스크 치즈 케이크</string>
    <string name="menu_desc5">웨딩 임페리얼 티로 만든 칵테일과 부드러운 바스크 치즈 케이크! 조화로운가? 부드러움이 2배인 조합!</string>
    <string name="menu_components5_name1">웨딩 티 칵테일</string>
    <string name="menu_components5_desc1">프랑스의 최고급 홍차 웨딩 임페리얼로 블렌딩한 티 칵테일! 향긋한 카라멜과 부드러운 목넘김이 일품.</string>
    <string name="menu_components5_name2">바스크 치즈 케이크</string>
    <string name="menu_components5_desc2">스모키한 향이 입혀져 훨씬 더 고급스러운 풍미를 느낄 수 있는 바스크 치즈 케이크는 입에 넣자마자 녹아 없어질 거예요~!</string>

    <!--사이트-->
    <string name="menu_site1" translatable="false">https://map.naver.com/p/entry/place/1113831375?c=15.00,0,0,0,dh</string>
    <string name="menu_site2" translatable="false">https://map.naver.com/p/entry/place/1489745174?c=15.00,0,0,0,dh</string>
    <string name="menu_site3" translatable="false">https://map.naver.com/p/entry/place/1204612604?c=15.00,0,0,0,dh</string>
    <string name="menu_site4" translatable="false">https://map.naver.com/p/entry/place/767562269?c=14.00,0,0,0,dh</string>
    <string name="menu_site5" translatable="false">https://map.naver.com/p/entry/place/36841696?c=14.00,0,0,0,dh</string>
</resources>