<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="90dp"
        android:text="@string/login_title"
        android:textSize="36dp"
        android:fontFamily="@font/shrikhand_regular"
        android:textColor="@color/highlight"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/login_id"
        android:paddingVertical="12dp"
        android:paddingStart="16dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/login_graybox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="12dp"
        android:paddingStart="16dp"
        android:hint="@string/login_password"
        android:background="@drawable/login_graybox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_id" />

    <android.widget.Button
        android:id="@+id/login_loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_loginbtn"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/login_loginbtn"
        android:stateListAnimator="@null"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <LinearLayout
        android:gravity="right"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_loginbtn">

        <android.widget.Button
            android:id="@+id/login_signupbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signupbtn"
            android:textSize="14sp"
            android:textColor="#818181"
            android:background="@color/transparent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>